frontend: fix text sometimes covered by close button (status comp)
On smaller screens the close button of the status component
sometimes covers the text of the status message.

Added a pseudoelement that is floating on the right side and
guards the close button so that longer text break to a new line
before the close button.

--- a/frontends/web/src/components/status/status.module.css
+++ b/frontends/web/src/components/status/status.module.css
@@ -62,6 +62,15 @@
     height: 18px;
 }
 
+.withCloseBtn .status::before {
+    content: "";
+    float: right;
+    height: 18px;
+    padding-bottom: 2px;
+    padding-left: var(--space-default);
+    width: 18px;
+}
+
 @media (max-width: 1199px) {
     .container {
         padding: calc(var(--space-half) * 1.5);
